@@ -85,7 +85,6 @@
 
     <div id="footer-wrapper">
       <div id="footer">
-        <?php print $footer_message; ?>
         <?php if (!empty($footer)): print $footer; endif; ?>
       </div> <!-- /footer -->
     </div> <!-- /footer-wrapper -->
