@@ -111,7 +111,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
 - Page organization
     * Made the help text area a full featured region with blocks.
     * Site mission is replaced with the highlighted content block region and 
-      separate RSS feed description settings.  
+      separate RSS feed description settings.
+    * The footer message setting was removed in favor of custom blocks. 
 - Upgraded the core JavaScript library to jQuery version 1.3.2.
 - Upgraded the jQuery Forms library to 2.21.
 
